--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-blinker=1.9.0=py311haa95532_0
-bzip2=1.0.8=h2bbff1b_6
-ca-certificates=2025.2.25=haa95532_0
-click=8.1.8=py311haa95532_0
-colorama=0.4.6=py311haa95532_0
-flask=3.1.0=py311haa95532_0
-itsdangerous=2.2.0=py311haa95532_0
-jinja2=3.1.6=py311haa95532_0
-libffi=3.4.4=hd77b12b_1
-markupsafe=3.0.2=py311h827c3e9_0
-openssl=3.0.16=h3f729d1_0
-pip=25.1=pyhc872135_2
-python=3.11.11=h4607a30_0
-setuptools=78.1.1=py311haa95532_0
-sqlite=3.45.3=h2bbff1b_0
-tk=8.6.14=h0416ee5_0
-tzdata=2025b=h04d1e81_0
-vc=14.42=haa95532_5
-vs2015_runtime=14.42.34433=hbfb602d_5
-werkzeug=3.1.3=py311haa95532_0
-wheel=0.45.1=py311haa95532_0
-xz=5.6.4=h4754444_1
-zlib=1.2.13=h8cc25b3_1
+blinker=1.9.0
+bzip2=1.0.8
+ca-certificates=2025.2.25
+click=8.1.8
+colorama=0.4.6
+flask=3.1.0
+itsdangerous=2.2.0
+jinja2=3.1.6
+libffi=3.4.4
+markupsafe=3.0.2
+openssl=3.0.16
+pip=25.1
+python=3.11.11
+setuptools=78.1.1
+sqlite=3.45.3
+tk=8.6.14
+tzdata=2025b
+vc=14.42
+vs2015_runtime=14.42.34433
+werkzeug=3.1.3
+wheel=0.45.1
+xz=5.6.4
+zlib=1.2.13
