--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-blinker=1.9.0
-bzip2=1.0.8
-ca-certificates=2025.2.25
-click=8.1.8
-colorama=0.4.6
-flask=3.1.0
-itsdangerous=2.2.0
-jinja2=3.1.6
-libffi=3.4.4
-markupsafe=3.0.2
-openssl=3.0.16
-pip=25.1
-python=3.11.11
-setuptools=78.1.1
-sqlite=3.45.3
-tk=8.6.14
-tzdata=2025b
-vc=14.42
-vs2015_runtime=14.42.34433
-werkzeug=3.1.3
-wheel=0.45.1
-xz=5.6.4
-zlib=1.2.13
+blinker==1.9.0
+bzip2==1.0.8
+ca-certificates==2025.2.25
+click==8.1.8
+colorama==0.4.6
+flask==3.1.0
+itsdangerous==2.2.0
+jinja2==3.1.6
+libffi==3.4.4
+markupsafe==3.0.2
+openssl==3.0.16
+pip==25.1
+python==3.11.11
+setuptools==78.1.1
+sqlite==3.45.3
+tk==8.6.14
+tzdata==2025b
+vc==14.42
+vs2015_runtime==14.42.34433
+werkzeug==3.1.3
+wheel==0.45.1
+xz==5.6.4
+zlib==1.2.13
