--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,8 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-blinker==1.9.0
-bzip2==1.0.8
-ca-certificates==2025.2.25
-click==8.1.8
-colorama==0.4.6
-flask==3.1.0
-itsdangerous==2.2.0
-jinja2==3.1.6
-libffi==3.4.4
-markupsafe==3.0.2
-openssl==3.0.16
-pip==25.1
-python==3.11.11
-setuptools==78.1.1
-sqlite==3.45.3
-tk==8.6.14
-tzdata==2025b
-vc==14.42
-vs2015_runtime==14.42.34433
-werkzeug==3.1.3
-wheel==0.45.1
-xz==5.6.4
-zlib==1.2.13
+blinker @ file:///C:/b/abs_b1i87khtob/croot/blinker_1737448732095/work
+click @ file:///C:/b/abs_42rbjngfys/croot/click_1744271606983/work
+colorama @ file:///C:/ci_311/colorama_1676422310965/work
+Flask @ file:///C:/b/abs_a6m37uz578/croot/flask_1737454335662/work
+itsdangerous @ file:///C:/b/abs_c4vwgdr5yn/croot/itsdangerous_1716533399914/work
+Jinja2 @ file:///C:/b/abs_920kup4e6u/croot/jinja2_1741711580669/work
+MarkupSafe @ file:///C:/b/abs_a0ma7ge0jc/croot/markupsafe_1738584052792/work
+Werkzeug @ file:///C:/b/abs_c7bupijx2_/croot/werkzeug_1737448709012/work
