--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,40 @@
+alabaster==0.7.16
+awscli==1.40.15
+babel==2.17.0
 blinker 
+boto3==1.38.16
+botocore==1.38.16
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click 
 colorama 
+docutils==0.19
 Flask 
+futures==3.0.5
+gunicorn==23.0.0
+idna==3.10
+imagesize==1.4.1
 itsdangerous 
 Jinja2 
+jmespath==1.0.1
 MarkupSafe 
-Werkzeug 
-gunicorn==23.0.0
 packaging==25.0
+pyasn1==0.6.1
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+requests==2.32.3
+rsa==4.7.2
+s3transfer==0.12.0
+six==1.17.0
+snowballstemmer==3.0.1
+sphinx-rtd-theme==0.5.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+urllib3==2.4.0
+Werkzeug 
+xmltodict==0.14.2
